[gd_scene load_steps=18 format=2]

[ext_resource path="res://selection/SelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://selection/PlayerSelection.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/montserrat_eb_20.tres" type="DynamicFont" id=3]
[ext_resource path="res://selection/Fight.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/keys_and_buttons/joypad/PS4_Cross.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/futureui-panel-2.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/bungee/BungeeLayers-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://special_scenes/combat_UI/session_points/Star.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.965382 ),
"transitions": PoolRealArray( 1, 1.27456, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="GDScript" id=4]
script/source = "extends Node2D

signal letsfight
signal deactivated
const description : String = \"{n_players} READY TO FIGHT\"
const win_condition : String = \"{n_matches} STARS TO WIN\"
onready var win_label = $win1/WinLabel
onready var anim = $AnimationPlayer
var human_players = []

func _ready():
	set_process_input(false)
	visible = false

func _input(event):
	for player in human_players:
		if event.is_action_pressed(player.controls+\"_fire\"):
			deactivate(true)
			emit_signal(\"letsfight\")
	if event.is_action_pressed(\"ui_left\") or event.is_action_pressed(\"ui_right\") or event.is_action_pressed(\"ui_cancel\"):
		deactivate()

func start(players: Array, n_matches: int):
	human_players = players
	var num_players = len(players)
	visible = true
	anim.play('close')
	
	$Label.text = tr(description.format({\"n_players\": str(num_players) + ' PLAYER' + ('S' if num_players != 1 else '')}))
	win_label.text = tr(win_condition.format({\"n_matches\":n_matches}))
	set_process_input(true)
	
	
func deactivate(show = false):
	set_process_input(false)
	visible = show
	emit_signal('deactivated')
	
"

[sub_resource type="DynamicFont" id=5]
size = 52
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 28
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=8]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.5, -2, -2 ),
"update": 0,
"values": [ Vector2( -10, -893 ), Vector2( -10, -705 ), Vector2( -10, -740 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.5, -2, -2 ),
"update": 0,
"values": [ Vector2( -10, 453 ), Vector2( -10, 251 ), Vector2( -10, 298 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.5, -2, -2 ),
"update": 0,
"values": [ Vector2( -650, 260 ), Vector2( -650, 51 ), Vector2( -650, 101 ) ]
}

[node name="SelectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Info" type="NinePatchRect" parent="."]
margin_left = 440.0
margin_top = 18.0
margin_right = 813.0
margin_bottom = 68.0
patch_margin_left = 3
patch_margin_top = 2
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Container" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -305.0
margin_bottom = 230.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p1" parent="Container" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 234.0
margin_top = 0.0
margin_right = 434.0
margin_bottom = 535.0
rect_min_size = Vector2( 200, 400 )

[node name="p2" parent="Container" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 438.0
margin_top = 0.0
margin_right = 638.0
margin_bottom = 535.0

[node name="p3" parent="Container" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_top = 0.0
margin_right = 842.0
margin_bottom = 535.0

[node name="p4" parent="Container" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 846.0
margin_top = 0.0
margin_right = 1046.0
margin_bottom = 535.0

[node name="Tween" type="Tween" parent="."]

[node name="TopHUD" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 11.0
margin_bottom = 42.0
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="TopHUD"]
margin_right = 471.0
margin_bottom = 31.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TopHUD"]
margin_left = 484.0
margin_top = 1.0
margin_right = 795.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "SELECT 1 TO 4 PLAYERS"
align = 1
valign = 1
uppercase = true

[node name="Control2" type="Control" parent="TopHUD"]
margin_left = 808.0
margin_right = 1280.0
margin_bottom = 31.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="BottomHUD" type="HBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -46.0
margin_bottom = -20.0
custom_constants/separation = 25

[node name="Control" type="Control" parent="BottomHUD"]
margin_right = 569.0
margin_bottom = 26.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="TopLeftLine" type="Line2D" parent="BottomHUD/Control"]
position = Vector2( 1.00986, -664 )
scale = Vector2( 1.25247, 1 )
points = PoolVector2Array( 0, 676, 480, 676 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 91

[node name="Fight" type="HBoxContainer" parent="BottomHUD"]
margin_left = 594.0
margin_right = 685.0
margin_bottom = 26.0
script = ExtResource( 4 )

[node name="Control" type="Control" parent="BottomHUD/Fight"]
margin_right = 30.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )

[node name="Sprite" type="Sprite" parent="BottomHUD/Fight"]
position = Vector2( 9.5, 8.5 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BottomHUD/Fight/Sprite"]
anims/idle = SubResource( 2 )
anims/wiggle = SubResource( 3 )

[node name="Label" type="Label" parent="BottomHUD/Fight"]
margin_left = 34.0
margin_right = 91.0
margin_bottom = 26.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "play"
align = 1
valign = 1
uppercase = true

[node name="Control2" type="Control" parent="BottomHUD"]
margin_left = 710.0
margin_right = 1280.0
margin_bottom = 26.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="BottomRightLine2" type="Line2D" parent="BottomHUD/Control2"]
position = Vector2( -1073.52, -664 )
scale = Vector2( 1.4124, 1 )
points = PoolVector2Array( 740, 676, 1280, 676 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 91

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0

[node name="SmokeScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.0705882, 0.0509804, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ReadyToFight" type="Node2D" parent="CanvasLayer"]
position = Vector2( 650, 550 )
script = SubResource( 4 )

[node name="ColorRect" type="Sprite" parent="CanvasLayer/ReadyToFight"]
modulate = Color( 0.227451, 0.133333, 0.12549, 1 )
position = Vector2( -10, 453 )
texture = ExtResource( 6 )

[node name="ColorRect2" type="Sprite" parent="CanvasLayer/ReadyToFight"]
modulate = Color( 0.227451, 0.133333, 0.12549, 1 )
position = Vector2( -10, -893 )
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer/ReadyToFight"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -650.0
margin_top = -49.0
margin_right = 630.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "N PLAYERS READY TO FIGHT!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/ReadyToFight"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -650.0
margin_top = 260.0
margin_right = 630.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 6 )
text = "PRESS A BUTTON TO CONTINUE"
align = 1
valign = 1

[node name="win1" parent="CanvasLayer/ReadyToFight" instance=ExtResource( 8 )]
visible = false
position = Vector2( 493.7, -23.4 )
won = true

[node name="WinLabel" type="Label" parent="CanvasLayer/ReadyToFight/win1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.7
margin_top = 73.4
margin_right = 133.3
margin_bottom = 123.4
custom_fonts/font = SubResource( 7 )
text = "N stars to win"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ReadyToFight"]
playback_speed = 2.0
anims/close = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="deactivated" from="CanvasLayer/ReadyToFight" to="." method="_on_ReadyToFight_deactivated"]
[connection signal="letsfight" from="CanvasLayer/ReadyToFight" to="." method="_on_ReadyToFight_letsfight"]
